--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/Census/step_conditions.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/Census/step_conditions.html.twig
@@ -69,6 +69,8 @@
 							<li>- {{ 'census.step_conditions.p4_content'|trans|raw }}</li>
 						
 							<li>- {{ 'census.step_conditions.p5_content'|trans|raw }}</li>
+							
+							<li>- {{ 'census.step_conditions.p6_content'|trans|raw }}</li>
 						</ul>
 					</div>                  
 							
