Put translation key in step 2 location

--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/Census/step2_location.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/Census/step2_location.html.twig
@@ -62,7 +62,7 @@
 
               		<div class="well justify-block">
 						<p class="lead2">
-              				Necesitamos que aceptes la determinación de tu ubicación para poder darte de alta en el censo de votantes de Participa Sevilla, si no la aceptas, no podremos darte de alta en el sistema de votación. Esta información no queda almacenada y solo se utiliza para verificar que efectivamente resides en el municipio de Sevilla. En el siguiente paso, deberás “permitir” la ubicación de tu ordenador para continuar con el registro.  Si no puedes inscribirte de forma telemática en el censo, siempre podrás hacerlo de forma presencial en nuestra sede, calle Miguel Cid 45, Sevilla.
+              				{{ 'census.step2.p1_content'|trans|raw }}
               			</p>
               			
               			<div class="clearfix"></div>
