Change social links to ahoraencomun

--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
@@ -91,8 +91,8 @@
 		                  </div>
 		                  
 		                  <div class="col-sm-2 footer-social pull-right">
-		                      <a href="https://www.facebook.com/democraciaparticipativa"><i class="fa fa-facebook"></i></a>
-		                      <a href="https://twitter.com/dparticipa"><i class="fa fa-twitter"></i></a>
+		                      <a href="https://www.facebook.com/ahoraencomun"><i class="fa fa-facebook"></i></a>
+		                      <a href="https://twitter.com/ahoraencomun"><i class="fa fa-twitter"></i></a>
 		                      <a href="https://www.linkedin.com/groups?home=&gid=3805926&trk=anet_ug_hm"><i class="fa fa-linkedin"></i></a>
 		                  </div>
 		                  
