--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/Census/step5_finish.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/Census/step5_finish.html.twig
@@ -75,17 +75,17 @@ display: inline;
 						<div id="share-buttons">
     
 						    <!-- Email -->
-						    <a href="mailto:?Subject=Decide el voto de investidura del alcalde con Participa Sevilla&amp;Body=Participa%20en%20la%20decisión%20colectiva%20sobre%20el%20voto%20de%20los%20concejales%20electos%20de%20Participa%20Sevilla%20en%20el%20pleno%20de%20investidura%20del%20alcalde%20del%20Ayuntamiento%20de%20Sevilla%20%20https://participasevilla.org">
+						    <a href="mailto:?Subject=Decide el voto de investidura del alcalde con Participa Sevilla&amp;Body=Participa%20en%20la%20decisión%20colectiva%20sobre%20el%20voto%20de%20los%20concejales%20electos%20de%20Participa%20Sevilla%20en%20el%20pleno%20de%20investidura%20del%20alcalde%20del%20Ayuntamiento%20de%20Sevilla%20%20https://ahoraencomun.info">
 						        <img src="{{ asset('bundles/municipales/img/somacro/email.png') }}" alt="Email" />
 						    </a>
 						 
 						    <!-- Facebook -->
-						    <a href="http://www.facebook.com/sharer.php?u=https://participasevilla.org" target="_blank">
+						    <a href="http://www.facebook.com/sharer.php?u=http://ahoraencomun.info" target="_blank">
 						        <img src="{{ asset('bundles/municipales/img/somacro/facebook.png') }}" alt="Facebook" />
 						    </a>
 						    
 						    <!-- Twitter -->
-						    <a href="https://twitter.com/intent/tweet?url=http://participasevilla.org&amp;name=Participa%20Sevilla&hashtags=participasevilla&text=Decide%20tu%20alcald%C3%ADa" target="_blank">
+						    <a href="https://twitter.com/intent/tweet?url=http://ahoraencomun.info&amp;name=AhoraEnComun&hashtags=ahoraencomun&text=" target="_blank">
 						        <img src="{{ asset('bundles/municipales/img/somacro/twitter.png') }}" alt="Twitter" />
 						    </a>
 						 
