Add logo in layout for aec

--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
@@ -55,7 +55,7 @@
 					            </button>
 					            <h1>
 					              <a href="{{ path('census_index') }}" class="navbar-brand2" title="ListAbierta.org">
-					                <img class="hidde-xs" alt="ListaAbierta.org" src="{{ asset('bundles/municipales/img/brand-1.png') }}">
+					                <img class="hidde-xs" alt="ListaAbierta.org" src="{{ asset('bundles/municipales/img/logo.jpg') }}">
 					                <span class="hidden">ListAbierta.org</span>
 					              </a>
 					            </h1>
