Fix social links in layout

--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
@@ -91,9 +91,8 @@
 		                  </div>
 		                  
 		                  <div class="col-sm-2 footer-social pull-right">
-		                      <a href="https://www.facebook.com/ahoraencomun"><i class="fa fa-facebook"></i></a>
-		                      <a href="https://twitter.com/ahoraencomun"><i class="fa fa-twitter"></i></a>
-		                      <a href="https://www.linkedin.com/groups?home=&gid=3805926&trk=anet_ug_hm"><i class="fa fa-linkedin"></i></a>
+		                      <a href="http://www.facebook.com/sharer.php?u=http://ahoraencomun.info"><i class="fa fa-facebook"></i></a>
+		                      <a href="https://twitter.com/intent/tweet?url=http://ahoraencomun.info&amp;name=AhoraEnComun&hashtags=ahoraencomun&text="><i class="fa fa-twitter"></i></a>
 		                  </div>
 		                  
 		                  <div class="col-sm-2 pull-right center">
