--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/Census/step5_finish.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/Census/step5_finish.html.twig
@@ -75,7 +75,7 @@ display: inline;
 						<div id="share-buttons">
     
 						    <!-- Email -->
-						    <a href="mailto:?Subject=Decide el voto de investidura del alcalde con Participa Sevilla&amp;Body=Participa%20en%20la%20decisión%20colectiva%20sobre%20el%20voto%20de%20los%20concejales%20electos%20de%20Participa%20Sevilla%20en%20el%20pleno%20de%20investidura%20del%20alcalde%20del%20Ayuntamiento%20de%20Sevilla%20%20https://ahoraencomun.info">
+						    <a href="mailto:?Subject=No estamos dormid@s, estabamos despertando. &amp;Body=Hola, Algo bueno está despertando llegamos pronto porque 2+2≠5. Comparte la ilusión en http://www.ahoraencomun.info y apúntate al censo online que tomará TODAS las decisiones relevantes de esta candidatura, sin directrices, sin cúpulas, una persona es un voto. No estamos dormid@s, estabamos despertando.">
 						        <img src="{{ asset('bundles/municipales/img/somacro/email.png') }}" alt="Email" />
 						    </a>
 						 
