--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
@@ -62,9 +62,8 @@
           					</div>
 							
           					<div class="col-sm-2 header-social pull-right">
-		                        <a href="https://www.facebook.com/democraciaparticipativa"><i class="fa fa-facebook-square"></i></a>
-		                        <a href="https://twitter.com/dparticipa"><i class="fa fa-twitter-square"></i></a>
-		                        <a href="https://www.linkedin.com/groups?home=&gid=3805926&trk=anet_ug_hm"><i class="fa fa-linkedin-square"></i></a>
+		                        <a href="http://www.facebook.com/sharer.php?u=http://ahoraencomun.info"><i class="fa fa-facebook-square"></i></a>
+		                        <a href="https://twitter.com/intent/tweet?url=http://ahoraencomun.info&amp;name=AhoraEnComun&hashtags=ahoraencomun&text="><i class="fa fa-twitter-square"></i></a>
 		                    </div>
 
 			         </div>
