--- a/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
+++ b/src/Listabierta/Bundle/MunicipalesBundle/Resources/views/theme/layout.html.twig
@@ -53,12 +53,11 @@
 					              <span class="icon-bar"></span>
 					              <span class="icon-bar"></span>
 					            </button>
-					            <h1>
-					              <a href="{{ path('census_index') }}" class="navbar-brand2" title="ListAbierta.org">
-					                <img class="hidde-xs" alt="ListaAbierta.org" src="{{ asset('bundles/municipales/img/logo.png') }}">
-					                <span class="hidden">ListAbierta.org</span>
-					              </a>
-					            </h1>
+					            
+					            <a href="{{ path('census_index') }}" class="navbar-brand2" title="ahoraencomun.info">
+					                <img class="hidde-xs" alt="ahoraencomun.info" src="{{ asset('bundles/municipales/img/logo.png') }}">
+					                <span class="hidden">ahoraencomun.info</span>
+					            </a>
           					</div>
 							
           					<div class="col-sm-2 header-social pull-right">
@@ -66,11 +65,11 @@
 		                        <a href="https://twitter.com/intent/tweet?url=http://ahoraencomun.info&amp;name=AhoraEnComun&hashtags=ahoraencomun&text="><i class="fa fa-twitter-square"></i></a>
 		                    </div>
 
-			         </div>
-			      </nav>
+			         	</div>
+			      	</nav>
 		
 		    	</div>
-		  </div>
+		  	</div>
 		 
           {% block content %}{% endblock %}
 
